Resolve conf and remove broken css selector

--- a/prog-lang-tutor-client/src/components/Home/Home.css
+++ b/prog-lang-tutor-client/src/components/Home/Home.css
@@ -9,26 +9,24 @@ Accent/borders Green colors: #36B37E
 body {
   background-color: #1d2025;
 }
-/* navbar {
-  display: none !important;
-} */
-div {
-  height: 10vh;
-}
+
 .javsScLogo {
   width: 2vw;
   height: 2vh;
 }
+
 .javaLogo {
   width: 3vw;
   height: 3vh;
 }
+
 .phpLogo {
   width: 3vw;
   height: 3vh;
 }
-@media only screen and (max-width: 600px) {
-}
+
+@media only screen and (max-width: 600px) {}
+
 /* .landingPageImg { */
 /* background-image: url(https://p0.piqsels.com/preview/428/871/775/school-coding-data-software-development.jpg); */
 /* background-size: cover;
@@ -46,10 +44,12 @@ div {
   text-align: center;
   padding-bottom: 50px;
 }
+
 .titleHome p {
   font: 5px;
   font-family: sans-serif;
 }
+
 .courseTable {
   position: relative;
   bottom: 200px;
@@ -72,15 +72,19 @@ table td {
   padding: 1rem;
   border: 0.25px solid grey;
 }
+
 table tr:first-child td {
   border-top: 0;
 }
+
 table tr td:first-child {
   border-left: 0;
 }
+
 table tr:last-child td {
   border-bottom: 0;
 }
+
 table tr td:last-child {
   border-right: 0;
 }
@@ -98,12 +102,15 @@ a {
   text-decoration: none;
   color: white;
 }
+
 a:hover {
   color: #36b37e;
 }
+
 td {
   align-content: center;
 }
+
 .searchBar {
   position: absolute;
   top: 400px;
@@ -114,6 +121,7 @@ td {
   /* display: flex;
   align-items: center; */
 }
+
 footer {
   position: relative;
   top: 500px;
